--- a/CSC455_ProjectCalculator/CSC455_ProjectCalculator.csproj
+++ b/CSC455_ProjectCalculator/CSC455_ProjectCalculator.csproj
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>CSC455_ProjectCalculator.Program</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
