--- a/CSC455_ProjectCalculator/CSC455_ProjectCalculator.csproj
+++ b/CSC455_ProjectCalculator/CSC455_ProjectCalculator.csproj
@@ -49,7 +49,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AdvancedCalc.cs" />
+    <Compile Include="AdvancedCalc.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="AdvancedCalc.Designer.cs">
       <DependentUpon>AdvancedCalc.cs</DependentUpon>
     </Compile>
